--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <ul id="chatMessages"></ul>
 
   <script>
-    const socket = new WebSocket('wss://your-netlify-app-url'); // Ganti dengan URL Netlify Anda
+    const socket = new WebSocket('https://rdh-chatapp.netlify.app/'); // Ganti dengan URL Netlify Anda
 
     socket.onmessage = (event) => {
       const messages = document.getElementById('chatMessages');
